Bug 1546098 - Ensure that nsRefreshDriver is always stopped when not needed. r=emilio a=pascalc

nsRefreshDrivers belonging to fully-loaded documents in content processes
now correctly stop their timer when no observers are present.

Differential Revision: https://phabricator.services.mozilla.com/D28339